2019-08-05  Steven g. Kargl  <kargl@gcc.gnu.org>

PR fortran/91372
	* decl.c (gfc_match_data): Allow an implied do-loop to nestle against
	DATA.

2019-08-05  Steven g. Kargl  <kargl@gcc.gnu.org>

	PR fortran/91372
	* gfortran.dg/pr91372.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@274122 138bc75d-0d04-0410-961f-82ee72b054a4